use a new shape importer and replace back-face culling

--- a/src/shapes/CMakeLists.txt
+++ b/src/shapes/CMakeLists.txt
@@ -24,3 +24,4 @@ add_shape(heightfield heightfield.cpp)
 add_shape(ply ply.cpp ply/ply_parser.cpp 
   ply/byte_order.hpp ply/config.hpp ply/io_operators.hpp
   ply/ply.hpp ply/ply_parser.hpp)
+add_shape(shapenet        shapenet.cpp MTS_HW)
