--- a/src/shapes/SConscript
+++ b/src/shapes/SConscript
@@ -1,5 +1,6 @@
 Import('env', 'plugins')
 
+plugins += env.SharedLibrary('shapenet', ['shapenet.cpp'])
 plugins += env.SharedLibrary('obj', ['obj.cpp'])
 plugins += env.SharedLibrary('ply', ['ply.cpp', 'ply/ply_parser.cpp'],
 	CPPPATH = env['CPPPATH'] + ['#src/shapes'])
